# Substrate-Platform

./: .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE  README.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: AccentColorField.tsx  AppearanceSettings.tsx  Button.tsx  CenterDock.tsx  ColorPickerWindow.tsx  ColorWheel.tsx  DataGrid.tsx  DockStrip.tsx  FileTree.tsx  FloatingPanel.tsx  Icon.tsx  IconButton.tsx  IconChevronRight.tsx  IconClose.tsx  IconFile.tsx  IconFloat.tsx  IconFolder.tsx  IconFolderOpen.tsx  IconGrid.tsx  IconList.tsx  IconMaximize.tsx  IconMinimize.tsx  IconPalette.tsx  IconPin.tsx  IconPinOff.tsx  IconPlus.tsx  IconProvider.tsx  IconRestore.tsx  IconSettings.tsx  IconSliders.tsx  IconTerminal.tsx  IconWindow.tsx  Label.tsx  MenuBar.tsx  MenuBarItem.tsx  OutputPanel.tsx  PanelSurface.tsx  PlatformShell.tsx  SettingsWindow.tsx  Swatch.tsx  (+5 more)
examples/: hello_shell.rs
src/: dir.rs  lib.rs  log.rs  project.rs  pty.rs  shell.rs  task.rs  workflow.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: index.ts  index.tsx
ui/src/dock/: dock.css  index.tsx  types.tsx
ui/src/icons/: Icon.tsx  icons.tsx  index.ts  index.tsx  registry.tsx
ui/src/menu/: MenuBar.tsx  MenuBarItem.css  MenuBarItem.tsx  index.tsx  menu.css
ui/src/panels/: OutputPanel.css  TerminalPanel.css  TerminalPanel.tsx  index.ts
ui/src/settings/: SettingsWindow.css  SettingsWindow.tsx  index.tsx
ui/src/shell/: CenterDock.tsx  DockStrip.tsx  FloatingPanel.tsx  PanelSurface.tsx  PlatformShell.tsx  ToolWindowDock.tsx  dnd.ts  index.ts  (+8 more)
(+179 files in other folders)
